--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,9 +10,9 @@ import Layout from '../layouts/Layout.astro';
         <span class="cursor">_</span>
       </a>
       <nav class="nav">
-        <a href="/">blog</a>
-        <a href="/tags">tags</a>
-        <a href="/about" class="active">about</a>
+        <a href="/">文章</a>
+        <a href="/tags">分类</a>
+        <a href="/about" class="active">关于</a>
       </nav>
     </header>
 
