--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -32,9 +32,9 @@ function formatDate(date: Date): string {
         </a>
       </div>
       <nav class="nav">
-        <a href="/" class="active">blog</a>
-        <a href="/tags">tags</a>
-        <a href="/about">about</a>
+        <a href="/" class="active">文章</a>
+        <a href="/tags">分类</a>
+        <a href="/about">关于</a>
       </nav>
     </header>
 
