--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -31,9 +31,9 @@ const tocHeadings = headings.filter(h => h.depth === 2 || h.depth === 3);
         </a>
       </div>
       <nav class="nav">
-        <a href="/">blog</a>
-        <a href="/tags">tags</a>
-        <a href="/about">about</a>
+        <a href="/">文章</a>
+        <a href="/tags">分类</a>
+        <a href="/about">关于</a>
       </nav>
     </header>
 
