--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -41,9 +41,9 @@ function formatDate(date: Date): string {
         </a>
       </div>
       <nav class="nav">
-        <a href="/">blog</a>
-        <a href="/tags" class="active">tags</a>
-        <a href="/about">about</a>
+        <a href="/">文章</a>
+        <a href="/tags" class="active">分类</a>
+        <a href="/about">关于</a>
       </nav>
     </header>
 
