--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -27,9 +27,9 @@ const sortedTags = Array.from(tagMap.entries()).sort((a, b) => b[1] - a[1]);
         </a>
       </div>
       <nav class="nav">
-        <a href="/">blog</a>
-        <a href="/tags" class="active">tags</a>
-        <a href="/about">about</a>
+        <a href="/">文章</a>
+        <a href="/tags" class="active">分类</a>
+        <a href="/about">关于</a>
       </nav>
     </header>
 
